--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
