--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "cheerio": "^1.0.0-rc.9",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "puppeteer": "^10.0.0",
+    "readline": "^1.3.0",
+    "request": "^2.88.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
